Complete Hero Section
Hero grid complete with responsiveness

--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
     </header>
     <!--HERO SECTION-->
 
-    <section class="sectionGrid">
-        <div id="heroGrid">
-            <div id="aboutMe" class="heroGridArea">
-                <h1>Hi! I'm Nicole</h1>
-                <h2>I'm a UX/UI Designer with a background in graphic design.</h2>
-            </div>
-            <div id="headshot" class="heroGridArea"><img src="./images/headshot.png" alt="Nicole Werner"></div>
+    <section class="heroGrid">
+
+        <div id="aboutMe">
+            <h1>Hi! I'm Nicole</h1>
+            <h2>I'm a UX/UI Designer with a background in graphic design.</h2>
         </div>
+        <div id="headshot"><img src="./images/headshot.png" alt="Nicole Werner"></div>
         </div>
+
     </section>
     <!--ABOUT ME-->
 
