--- a/index.html
+++ b/index.html
@@ -39,55 +39,54 @@
     </section>
     <!--ABOUT ME-->
 
-    <Section>
-        <div class="aboutMeParent">
-            <div class="aboutMeChild1">
-                <h3>Allow me to introduce myself</h3>
-                <p>You know those moments that seem trivial, but they end up changing your life? Well, that moment for
-                    me occurred when I got my first digital camera. It was
-                    a 1.2MP Fujifilm Finepix camera. That’s right. One-point-two! That little camera came with Photoshop
-                    Elements and it changed my life.</p>
+    <section class="bioGrid">
+        <div id="bio">
+            <h3>Allow me to introduce myself</h3>
+            <p>You know those moments that seem trivial, but they end up changing your life? Well, that moment for
+                me occurred when I got my first digital camera. It was
+                a 1.2MP Fujifilm Finepix camera. That’s right. One-point-two! That little camera came with Photoshop
+                Elements and it changed my life.</p>
 
-                <p>Fast-forward a few years and I found myself in responsible for design assets in marketing departments
-                    of large companies.</p>
+            <p>Fast-forward a few years and I found myself in responsible for design assets in marketing departments
+                of large companies.</p>
 
-                <p>Like most life-long learners, I spent some time exploring ways to expand my design knowledge and
-                    skills. UX/UI seemed like a natural step, so I decided to enroll myself in the University of Oregon
-                    UX/UI Bootcamp. The growth wasn’t always comfortable, but I could feel in my bones that it was the
-                    path I needed to be on.</p>
+            <p>Like most life-long learners, I spent some time exploring ways to expand my design knowledge and
+                skills. UX/UI seemed like a natural step, so I decided to enroll myself in the University of Oregon
+                UX/UI Bootcamp. The growth wasn’t always comfortable, but I could feel in my bones that it was the
+                path I needed to be on.</p>
 
-                <p>My design career has been rewarding, and it just keeps getting better.</p>
-                <a href="#" class="button">Download Resume</a>
-            </div>
-            <div class="skillsChild2">
-                <h3>Skills</h3>
-                <ul>
-                    <li>User Research</li>
-                    <li>Interview Planning</li>
-                    <li>User Testing</li>
-                    <li>User Testing</li>
-                    <li>Affinity Diagrams</li>
-                    <li>Empathy Maps</li>
-                    <li>User Personas</li>
-                    <li>Wireframing</li>
-                    <li>Prototyping</li>
-                    <li>Design Systems</li>
-                    <li>User Flows</li>
-                    <li>Information Architecture</li>
-                </ul>
-                <h3>Technology</h3>
-                <ul>
-                    <li>Adobe XD</li>
-                    <li>Figma</li>
-                    <li>InVision</li>
-                    <li>Miro</li>
-                    <li>Illustrator</li>
-                    <li>Photoshop</li>
-                    <li>After Effects</li>
-                </ul>
-            </div>
+            <p>My design career has been rewarding, and it just keeps getting better.</p>
+            <a href="#" class="button">Download Resume</a>
         </div>
-    </Section>
+        <div id="skills">
+            <h3>Skills</h3>
+            <ul>
+                <li>User Research</li>
+                <li>Interview Planning</li>
+                <li>User Testing</li>
+                <li>User Testing</li>
+                <li>Affinity Diagrams</li>
+                <li>Empathy Maps</li>
+                <li>User Personas</li>
+                <li>Wireframing</li>
+                <li>Prototyping</li>
+                <li>Design Systems</li>
+                <li>User Flows</li>
+                <li>Information Architecture</li>
+            </ul>
+            <h3>Technology</h3>
+            <ul>
+                <li>Adobe XD</li>
+                <li>Figma</li>
+                <li>InVision</li>
+                <li>Miro</li>
+                <li>Illustrator</li>
+                <li>Photoshop</li>
+                <li>After Effects</li>
+            </ul>
+        </div>
+        </div>
+    </section>
 
     <!--MY WORK-->
     <section>
