Start of "My Work" Grid

--- a/index.html
+++ b/index.html
@@ -25,20 +25,18 @@
             </div>
         </div>
     </header>
+
     <!--HERO SECTION-->
-
     <section class="heroGrid">
-
         <div id="aboutMe">
             <h1>Hi! I'm Nicole</h1>
             <h2>I'm a UX/UI Designer with a background in graphic design.</h2>
         </div>
         <div id="headshot"><img src="./images/headshot.png" alt="Nicole Werner"></div>
         </div>
-
     </section>
-    <!--ABOUT ME-->
 
+    <!--ABOUT ME-->
     <section class="bioGrid">
         <div id="bio">
             <h3>Allow me to introduce myself</h3>
@@ -89,19 +87,19 @@
     </section>
 
     <!--MY WORK-->
-    <section>
-        <div class="myWorkHeader">
+    <section id="myWorkGrid">
+        <div id="myWorkHeader">
             <h3>My Work</h3>
             <hr>
         </div>
-        <div class="workSection">
-            <div class="myWorkChild1">
-                <h4>United States Department of the Treasury</h4>
-                <h5>Responsive Website Redesign</h5>
-            </div>
-            <div class="myWorkChild2">
-                <img src="./images/usdt_desktop2.png" alt="Responsive Design">
-            </div>
+
+        <div class="projectTitle">
+            <h4>United States Department of the Treasury</h4>
+            <h5>Responsive Website Redesign</h5>
+        </div>
+
+        <div class="projectImage"><img src="./images/usdt_desktop2.png" alt="Responsive Design">
+        </div>
         </div>
     </section>
 
