--- a/index.html
+++ b/index.html
@@ -87,19 +87,16 @@
     </section>
 
     <!--MY WORK-->
-    <section id="myWorkGrid">
-        <div id="myWorkHeader">
-            <h3>My Work</h3>
-            <hr>
-        </div>
-
-        <div class="projectTitle">
+    <div id="myWorkHeader">
+        <h3>My Work</h3>
+        <hr>
+    </div>
+    <section class="myWorkGrid">
+        <div id="projectTitle">
             <h4>United States Department of the Treasury</h4>
             <h5>Responsive Website Redesign</h5>
         </div>
-
-        <div class="projectImage"><img src="./images/usdt_desktop2.png" alt="Responsive Design">
-        </div>
+        <div id="projectImage"><img src="./images/usdt_desktop2.png" alt="Responsive Design"></div>
         </div>
     </section>
 
