--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <h4>United States Department of the Treasury</h4>
             <h5>Responsive Website Redesign</h5>
         </div>
-        <div id="projectImage"><img src="./images/usdt_desktop2.png" alt="Responsive Design"></div>
+        <div id="projectImage"><img src="./images/usdt_desktop2.png" alt="Responsive Design"><img src="./images/arrow.png" alt="View Project"></div>
         </div>
     </section>
 
