--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     </section>
 
     <!--MY WORK-->
-   
+
     <section class="myWorkGrid">
         <div id="myWorkHeader">
             <h3>My Work</h3>
@@ -97,24 +97,24 @@
             <h4>United States Department of the Treasury</h4>
             <h5>Responsive Website Redesign</h5>
         </div>
-        <div id="projectImage"><img src="./images/usdt_desktop2.png" alt="Responsive Design"><img src="./images/arrow.png" alt="View Project"></div>
+        <div id="projectImage"><img src="./images/usdt_desktop2.png" alt="Responsive Design"><img
+                src="./images/arrow.png" alt="View Project"></div>
         </div>
     </section>
 
     <!--FOOTER-->
     <footer class="footer">
-        <div class="contact">
-            <h2 class="footer">Get in touch with me</h2>
-            <a href="mailto:werner-ux@gmail.com">
-                <img src="./images/email_icon.png" alt="email me"></a>
-            <a href="https://www.linkedin.com/in/nicolemwerner/">
-                <img src="./images/linkedin_icon.png" alt="Linkedin" target="_blank"></a>
+        <div id="contact1">
+            <div id="contactMe">Get in touch with me</div>
+            <div id="socialIcons"><a href="mailto:werner-ux@gmail.com">
+                    <img src="./images/email_icon.png" alt="email me"></a>
+                <a href="https://www.linkedin.com/in/nicolemwerner/">
+                    <img src="./images/linkedin_icon.png" alt="Linkedin" target="_blank"></a></div>
         </div>
-        <div class="contact2">
-            <div class="contact2child">541-350-9601</div>
-            <div class="contact2child"><a href="mailto:werner-ux@gmail.com" target="_blank">werner-ux@gmail.com</a>
-            </div>
-            <div class="contact2child">©2021 Nicole Werner</div>
+        <div id="contact2">
+            <div id="phone">541-350-9601</div>
+            <div id="email"><a href="mailto: werner-ux@gmail.com">werner-ux@gmail.com</a></div>
+            <div id="copyright">©2022 Nicole Werner</div>
         </div>
     </footer>
 
